# telegram-stock-info-bot

./: .dockerignore  .geminiignore  .gitignore  Dockerfile  MIGRATION.md  Makefile  chart.py  chart_handler.py  docker-compose.yml  environment.yml  main.py  make_kr_excel_quant.py  make_us_excel_quant.py  naver_report_search_pc.py  pyproject.toml  recent_searches.py  report_alert_keyword.json  report_data.csv  report_handler.py  report_search.py  requirements.txt  ssol.py  stock_search.py  test_main.py  test_us.py  watcher.py
app_secrets/: endpoints.py
db/: __init__.py  report_dao.py
deployment/: telegram-bot.service
dev/: index_excel.py
docs/: changelog.md
handler/: chart_handler.py  diviend_handler.py  isu_handler.py  naver_report_handler.py  quant_handler.py  report_handler.py  upjong_handler.py
models/: CacheManager.py  SQLiteManager.py  cache_manager.py
module/: cache_manager.py  chart.py  divi_chart.py  excel_util.py  finviz.py  finviz_stock_quant.py  naver_report_search_pc.py  naver_stock.py  naver_stock_quant.py  naver_stock_util.py  naver_upjong_quant.py  pykrx_util.py  recent_searches.py  report_search.py  sqlite_util.py  stock_search.py
modules/: finviz_stock_quant.py  naver_stock_quant.py  naver_stock_report.py  naver_upjong_quant.py  oscillator_chart.py
reporter_worker/: Dockerfile  scheduler.py
run/: fetch_kr_stock_quant_async.py  kr_index_quant_excel.py  make_kr_upjong_excel.py
sql/: kr_isu.py
test/: api.py  api_back.py  consensus.py  consensus_bak.py  dev_chart.py  earning_consensus.py  earning_consensus_naver.py  earning_consensus_year.py  etf1_test.py  etf_test.py  investing.py  naver_stock_test.py  naver_test.py  pass_naver_isu_analy.py  pass_naver_upjong.py  pdf_upload_telegram.py  pp.py  tt.py  (+5 more)
(+9 files in other folders)
