[project]
name = "telegram-stock-info-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite==0.20.0",
    "anyio==4.4.0",
    "beautifulsoup4==4.12.3",
    "bs4==0.0.2",
    "certifi==2024.6.2",
    "charset-normalizer==3.3.2",
    "contourpy>=1.3.3",
    "cycler==0.12.1",
    "datetime==5.5",
    "deprecated==1.2.14",
    "et-xmlfile==1.1.0",
    "exceptiongroup==1.2.1",
    "finvizfinance",
    "fonttools==4.53.0",
    "frozendict==2.4.6",
    "greenlet==3.0.3",
    "h11==0.14.0",
    "html5lib==1.1",
    "httpcore==1.0.5",
    "httpx==0.27.0",
    "idna==3.7",
    "kiwisolver==1.4.5",
    "lxml==5.3.0",
    "matplotlib>=3.10.8",
    "multipledispatch==1.0.0",
    "multitasking==0.0.11",
    "numpy>=1.26.0",
    "openpyxl==3.1.5",
    "packaging==24.1",
    "pandas>=3.0.1",
    "peewee==3.17.8",
    "pillow==10.3.0",
    "platformdirs==4.3.6",
    "playwright==1.47.0",
    "pyee==12.0.0",
    "pykrx==1.0.48",
    "pyparsing==3.1.2",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "python-telegram-bot==21.3",
    "pytz==2024.1",
    "requests==2.32.3",
    "schedule>=1.2.2",
    "setuptools<70",
    "six==1.16.0",
    "sniffio==1.3.1",
    "soupsieve==2.5",
    "tqdm==4.67.1",
    "typing-extensions==4.12.2",
    "tzdata==2024.1",
    "urllib3==2.2.2",
    "watchdog==4.0.1",
    "webencodings==0.5.1",
    "wrapt==1.16.0",
    "xlrd==2.0.1",
    "xlsxwriter==3.2.2",
    "zope-interface==6.4.post2",
]

[tool.uv.sources]
finvizfinance = { git = "https://github.com/liante0904/finvizfinance.git", rev = "master" }
